[metadata]
name = example_package_hao
version = 1.0.1
author = Hao Bai
author_email = chuanhao.bai59@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/cHaoB05/example_package_hao
project_urls =
    Bug Tracker = https://github.com/cHaoB05/example_package_hao
    repository = https://github.com/cHaoB05/example_package_hao
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src